--- a/index.html
+++ b/index.html
@@ -7,5 +7,25 @@
 </head>
 <body>
 	
-</body>
+	<div class="hero-banner">
+	
+	</div>
+	<nav>
+	
+	</nav>
+	<div class="morei-info">
+	
+	</div>
+	<div class="sep">
+	
+	</div>
+	<div class="story">
+	
+	</div>
+	<div class="sep">
+	
+	</div>
+	<img src="img/the-gang.png
+
+	</body>
 </html>
